--- a/src/modules/common/btn/btn.scss
+++ b/src/modules/common/btn/btn.scss
@@ -1,32 +1,31 @@
-.code-btn{
+.xcode-btn{
     display: inline-block;
     font-weight: 400;
     white-space: nowrap;
     text-align: center;
-    background-image: none;
     cursor: pointer;
     padding: 4px 15px;
     font-size: 14px;
     border-radius: 4px;
     color: rgba(0,0,0,.85);
-    background: #fff;
+    background: #fff none;
     border: 1px solid #d9d9d9;
 }
 
-.code-btn-primary{
+.xcode-btn-primary{
     background: var(--tiklab-blue);
     border-color: var(--tiklab-blue);
     color: #ffffff;
 }
 
-.code-btn-disabled{
+.xcode-btn-disabled{
     color: rgba(0,0,0,.25);
     background: #f5f5f5;
     border-color: #d9d9d9;
     cursor:not-allowed;
 }
 
-.code-btn-text {
+.xcode-btn-text {
     color: rgba(0,0,0,.85);
     background: transparent;
     border-color: transparent;
@@ -37,21 +36,21 @@
     }
 }
 
-.code-btn-small{
+.xcode-btn-small{
     background: transparent;
     border-color: transparent;
     padding: 0;
     font-size: var(--tiklab-font-13);
 }
 
-.code-btn-dangerous{
+.xcode-btn-dangerous{
     color: #fff;
     background: #ff0000;
     border-color: #ff0000;;
 }
 
 
-.code-btn-link-disabled{
+.xcode-btn-link-disabled{
     color: rgba(0,0,0,.25);
     background: transparent;
     border-color: transparent;
@@ -59,14 +58,14 @@
     cursor:not-allowed;
 }
 
-.code-btn-link{
+.xcode-btn-link{
     color: var(--tiklab-blue);
     background: transparent;
     border-color: transparent;
     box-shadow: none;
 }
 
-.code-btn-link-small{
+.xcode-btn-link-small{
     color: var(--tiklab-blue);
     background: transparent;
     border-color: transparent;
@@ -74,15 +73,7 @@
     font-size: var(--tiklab-font-13);
 }
 
-.code-btn-link-nopadding{
-    color: var(--tiklab-blue);
-    background: transparent;
-    border-color: transparent;
-    box-shadow: none;
-    padding: 0;
-}
-
-.code-btn-row{
+.xcode-btn-row{
     width: 100%;
     text-align: left;
     background: transparent;
@@ -94,11 +85,11 @@
     }
 }
 
-.code-btn-mar{
+.xcode-btn-mar{
     margin-right: 15px;
 }
 
-.code-btn-icon{
+.xcode-btn-icon{
     display: inline-block;
     width: 16px;
     height: 16px;
