--- a/src/modules/common/guide/guide.scss
+++ b/src/modules/common/guide/guide.scss
@@ -1,21 +1,21 @@
-.code-guide{
+.xcode-guide{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    .code-guide-title{
+    .xcode-guide-title{
         border-radius: 4px;
         height: 40px;
         line-height: 40px;
         font-weight: var(--tiklab-font-weight-bold);
-        .code-guide-title-icon{
+        .xcode-guide-title-icon{
             font-size: var(--tiklab-icon-size-16);
         }
-        .code-guide-title-name{
+        .xcode-guide-title-name{
             padding: 0 8px;
         }
     }
-    .code-guide-ac{
+    .xcode-guide-ac{
         border-radius: 3px;
         cursor: pointer;
         font-size: 16px;
