--- a/src/modules/common/list/listname.scss
+++ b/src/modules/common/list/listname.scss
@@ -1,9 +1,9 @@
 
-.code-listname-href{
+.xcode-listname-href{
     cursor: pointer;
 }
 
-.code-listname-icon{
+.xcode-listname-icon{
     display: inline-block;
     width: var(--tiklab-icon-size-32);
     height: var(--tiklab-icon-size-32);
@@ -14,6 +14,6 @@
     margin-right: 8px;
 }
 
-.code-listname-name{
+.xcode-listname-name{
     color: var(--tiklab-blue);
 }
