--- a/src/modules/house/components/house.scss
+++ b/src/modules/house/components/house.scss
@@ -46,6 +46,7 @@
             }
             .name-text-desc{
                 color: var(--tiklab-gray-500);
+                font-size: var(--tiklab-font-13);
             }
         }
         .storehouse-tables-set{
