--- a/src/modules/houseDetails/branch/components/branch.scss
+++ b/src/modules/houseDetails/branch/components/branch.scss
@@ -56,6 +56,7 @@
                     }
                     .name-text-desc{
                         color: var(--tiklab-gray-500);
+                        font-size: var(--tiklab-font-13);
                         .desc-name{
                             margin-right: 8px;
                         }
