--- a/src/modules/common/btn/btn.scss
+++ b/src/modules/common/btn/btn.scss
@@ -38,6 +38,11 @@
     border-color: #ff0000;;
 }
 
+.xcode-btn-common{
+    background: #f4f4f4;
+    border-color: #f4f4f4;
+}
+
 .xcode-btn-mar{
     margin-right: 15px;
 }
