--- a/src/modules/houseDetails/branch/components/branch.scss
+++ b/src/modules/houseDetails/branch/components/branch.scss
@@ -82,3 +82,19 @@
         }
     }
 }
+
+.branch-add-modal{
+    .branch-add-up{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: var(--tiklab-font-weight-bold);
+        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+    }
+    .branch-add-content{
+        padding: 0 var(--tiklab-padding);
+        max-height:calc(100% - 120px);
+        overflow:auto;
+    }
+}
