--- a/src/modules/common/btn/btn.scss
+++ b/src/modules/common/btn/btn.scss
@@ -43,6 +43,13 @@
     border-color: #f4f4f4;
 }
 
+.xcode-btn-link{
+    color: var(--tiklab-blue);
+    background: transparent;
+    border-color: transparent;
+    box-shadow: none;
+}
+
 .xcode-btn-mar{
     margin-right: 15px;
 }
