--- a/src/modules/houseDetails/tag/components/tag.scss
+++ b/src/modules/houseDetails/tag/components/tag.scss
@@ -54,3 +54,19 @@
     }
 
 }
+
+.tag-add-modal{
+    .tag-add-up{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: var(--tiklab-font-weight-bold);
+        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+    }
+    .tag-add-content{
+        padding: 0 var(--tiklab-padding);
+        max-height:calc(100% - 120px);
+        overflow:auto;
+    }
+}
