--- a/src/modules/houseDetails/code/components/blob.scss
+++ b/src/modules/houseDetails/code/components/blob.scss
@@ -118,6 +118,7 @@
                     }
                     .editor-title-size{
                         padding: 0 8px;
+                        cursor: pointer;
                     }
                 }
                 .editor-title-right{
