--- a/src/modules/houseDetails/code/components/blob.scss
+++ b/src/modules/houseDetails/code/components/blob.scss
@@ -118,6 +118,8 @@
                     }
                     .editor-title-size{
                         padding: 0 8px;
+                    }
+                    .editor-title-copy{
                         cursor: pointer;
                     }
                 }
