--- a/src/modules/house/components/houseTable.scss
+++ b/src/modules/house/components/houseTable.scss
@@ -44,6 +44,7 @@
         }
     }
     .house-tables-collect{
+        cursor: pointer;
         .icon{
             width: 19px !important;
             height: 19px !important;
