--- a/src/modules/houseDetails/code/components/usher.scss
+++ b/src/modules/houseDetails/code/components/usher.scss
@@ -13,9 +13,10 @@
                 .usher-url-switch{
                     display: inline-flex;
                     margin-right: var(--tiklab-padding-item);
+                    background: #f4f4f4;
+                    padding: 2px;
                     .url-switch-prefix{
                         padding: 6px 12px;
-                        background: #f4f4f4;
                         cursor: pointer;
                         &:first-child{
                             border-top-left-radius: 4px;
@@ -26,6 +27,9 @@
                             border-top-right-radius: 4px;
                             border-bottom-right-radius: 4px;
                         }
+                    }
+                    .prefix-active{
+                        background: #ffffff;
                     }
                 }
                 .usher-url-input{
@@ -59,6 +63,7 @@
                 cursor: pointer;
                 padding: 6px 15px;
                 border: 1px solid var(--tiklab-blue);
+                color: var(--tiklab-blue);
                 display: inline-block;
             }
         }
