--- a/src/modules/houseDetails/branch/components/branch.scss
+++ b/src/modules/houseDetails/branch/components/branch.scss
@@ -32,11 +32,11 @@
                     }
                 }
                 .branch-tables-name{
-                    cursor: pointer;
                     flex: 1;
                     .name-text-name{
                         font-weight: var(--tiklab-font-weight-bold);
                         margin-right: 8px;
+                        cursor: pointer;
                         &:hover{
                             text-decoration: underline;
                         }
@@ -47,6 +47,7 @@
                     .name-text-type{
                         display: inline-block;
                         background: #02a7f0;
+                        color: #ffffff;
                         font-size: 12px;
                         line-height: 20px;
                         padding: 0 7px;
@@ -73,6 +74,13 @@
                     .branch-tables-del{
                         background: #ff0000;
                         color: #ffffff;
+                        padding: 6px 8px;
+                        border-radius: 4px;
+                    }
+                    .no-del{
+                        color: rgba(0,0,0,.25);
+                        background: #f5f5f5;
+                        cursor: not-allowed;
                         padding: 6px 8px;
                         border-radius: 4px;
                     }
