--- a/src/modules/houseDetails/commits/components/commits.scss
+++ b/src/modules/houseDetails/commits/components/commits.scss
@@ -16,18 +16,6 @@
                     width: 100% !important;
                 }
             }
-            .commits-bread{
-                display: flex;
-                .bread-item{
-                    &:not(:last-child){
-                        margin-right: 5px;
-                    }
-                    &:nth-child(odd):hover{
-                        cursor: pointer;
-                        text-decoration: underline;
-                    }
-                }
-            }
         }
         .commits-head-right{
             display: flex;
@@ -92,7 +80,8 @@
                             border-top-left-radius: 4px;
                             background-color: #fafafa;
                             padding: 6px 10px;
-                            border: 1px solid #e5e5e5
+                            border: 1px solid #e5e5e5;
+                            min-width: 80px;
                         }
                         .ident-copy{
                             padding: 10px;
