--- a/src/modules/houseDetails/code/components/edit.scss
+++ b/src/modules/houseDetails/code/components/edit.scss
@@ -13,6 +13,10 @@
                 &:not(:last-child){
                     margin-right: 10px;
                 }
+                &:hover{
+                    text-decoration: underline;
+                    cursor: pointer;
+                }
             }
         }
         &-editor{
