--- a/src/modules/houseDetails/code/components/blob.scss
+++ b/src/modules/houseDetails/code/components/blob.scss
@@ -102,3 +102,19 @@
         }
     }
 }
+
+.bold-del-modal{
+    .bold-del-up{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: var(--tiklab-font-weight-bold);
+        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+    }
+    .bold-del-content{
+        padding: 0 var(--tiklab-padding);
+        max-height:calc(100% - 120px);
+        overflow:auto;
+    }
+}
