--- a/src/modules/houseDetails/code/components/recentSubmitMsg.scss
+++ b/src/modules/houseDetails/code/components/recentSubmitMsg.scss
@@ -33,6 +33,7 @@
             background-color: #fafafa;
             padding: 6px 10px;
             border: 1px #e5e5e5 solid;
+            min-height: 35.6px;
         }
         .ident-btn{
             padding: 10px;
