--- a/src/modules/houseDetails/commits/components/commitsDetails.scss
+++ b/src/modules/houseDetails/commits/components/commitsDetails.scss
@@ -85,4 +85,10 @@
             }
         }
     }
+    .css-1n5o7vh-diff-container pre {
+        margin: 0;
+        white-space: pre-wrap;
+        word-break: break-all !important;
+        line-height: initial !important;
+    }
 }
