--- a/src/modules/home/components/homePage.scss
+++ b/src/modules/home/components/homePage.scss
@@ -59,19 +59,19 @@
                 }
             }
         }
-        .pipelineRecent{
+        .houseRecent{
             border-radius: 4px;
             padding: 10px;
             height: 200px;
             background: #fff;
             flex: 1;
             margin-bottom: 15px;
-            .pipelineRecent-content{
+            .houseRecent-content{
                 display: flex;
                 justify-content: flex-start;
                 padding-top: 5px;
             }
-            .pipelineRecent-item{
+            .houseRecent-item{
                 width: 232px;
                 height: 120px;
                 padding: 10px;
@@ -83,14 +83,14 @@
                     margin-right: 15px;
                 }
             }
-            .pipelineRecent-item:hover{
+            .houseRecent-item:hover{
                 border-radius: 4px 4px 0 0;
                 border-bottom-color: var(--tiklab-blue);
                 transition: 1s;
             }
-            .pipelineRecent-item-title{
+            .houseRecent-item-title{
                 padding-bottom: var(--tiklab-padding-item);
-                .pipelineRecent-icon{
+                .houseRecent-icon{
                     display: inline-block;
                     width: 32px;
                     height: 32px;
@@ -100,7 +100,7 @@
                     color: black;
                     font-size: 13px;
                 }
-                .pipelineRecent-name{
+                .houseRecent-name{
                     display: inline-block;
                     max-width: 170px;
                     overflow: hidden;
@@ -110,7 +110,7 @@
                     font-weight: var(--tiklab-font-weight-bold);
                 }
             }
-            .pipelineRecent-item-details{
+            .houseRecent-item-details{
                 font-size: var(--tiklab-font-13);
                 display: flex;
                 justify-content: space-around;
@@ -120,7 +120,7 @@
                     padding-right: 8px;
                 }
             }
-            .pipelineRecent-item-detail{
+            .houseRecent-item-detail{
                 height: 40px;
                 line-height: 40px;
                 &:first-child{
