--- a/src/modules/houseDetails/code/components/usher.scss
+++ b/src/modules/houseDetails/code/components/usher.scss
@@ -45,6 +45,7 @@
                         background: #f5f5f5;
                         border-left-color: transparent;
                         padding: 8px;
+                        margin-left: -1px;
                     }
                 }
             }
