--- a/src/modules/common/aside/aside.scss
+++ b/src/modules/common/aside/aside.scss
@@ -1,36 +1,79 @@
-.houseDetails{
+.xcode-layout{
     display: flex;
     width: 100%;
     height: 100%;
-    .aside{
+    .xcode-layout-content{
+        flex: 1;
+        height: 100%;
+        overflow: auto;
+    }
+    .scrum-aside{
         display: flex;
         flex-direction: column;
         flex-shrink: 0;
-        flex-basis: 80px;
+        width: 180px;
         height: 100%;
         background: var(--xcode-sider-color);
-        .content{
-            flex-grow: 1;
+        .scrum-aside-up{
+            flex: 1;
         }
-        .aside_chang{
+        .scrum-aside_chang{
+            display: flex;
+            align-items: center;
+            padding: 0 12px;
+            height: 50px;
+            cursor: pointer;
+            .dropdowns_name{
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: inline-block;
+                width: calc(100% - 55px);
+                padding:0 5px;
+            }
+        }
+        .scrum-aside-item{
+            padding: 8px 12px;
+            cursor: pointer;
+            &:hover{
+                background: var(--tiklab-gray-300);
+            }
+            &-icon{
+                padding-right: 10px;
+                font-size: 16px;
+            }
+        }
+        .scrum-aside-sys{
+            width: 100%;
+            padding: 10px 12px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            cursor: pointer;
+        }
+        .scrum-aside-select{
+            background: var(--tiklab-gray-400);
+            border-left: 3px solid var(--tiklab-blue);
+        }
+    }
+    .nomal-aside{
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        width: 80px;
+        height: 100%;
+        background: var(--xcode-sider-color);
+        .nomal-aside-up{
+            flex: 1;
+        }
+        .nomal-aside_chang{
             display: flex;
             align-items: center;
             justify-content: center;
             padding-left: 20px;
             height: 50px;
             cursor: pointer;
-            .dropdowns_icon{
-                display: inline-block;
-                width: 32px;
-                height: 32px;
-                line-height: 32px;
-                border-radius: 4px;
-                text-align: center;
-                margin-right: 5px;
-            }
         }
-
-        .aside_content{
+        .nomal-aside-item{
             cursor: pointer;
             display: flex;
             height: 50px;
@@ -45,34 +88,35 @@
                 margin-bottom: 5px;
             }
         }
-        .aside_active{
+        .nomal-aside_active{
             background: var(--tiklab-gray-400);
             border-left: 3px solid var(--tiklab-blue);
         }
-    }
-    &-sys{
-        width: 100%;
-        text-align: center;
-        padding: 10px 0;
-        cursor: pointer;
-    }
-    &-content{
-        flex: 1;
-        height: 100%;
-        overflow: auto;
-    }
-    .aside_content_icon{
-        font-size: var(--tiklab-icon-size-16);
+        .nomal-aside-sys{
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            cursor: pointer;
+        }
+        .nomal-aside_content_icon{
+            font-size: var(--tiklab-icon-size-16);
+        }
     }
 }
 
+
 .aside-dropdown{
     top: 48px !important;
-    left: 80px !important;
     box-shadow: 0 4px 8px -2px #091e4240, 0 0 1px #091e424f;
-    border-radius: 4px;
+    border-radius: 4px ;
     background-color: #ffffff;
-    .houseDetails-opt{
+    &-nomal{
+        left: 80px !important;
+    }
+    &-scrum{
+        left: 180px !important;
+    }
+    .menu-toggle{
         width: 200px;
         min-height: 100px;
         &-title{
@@ -113,3 +157,4 @@
         }
     }
 }
+
