--- a/src/modules/common/tabs/tabs.scss
+++ b/src/modules/common/tabs/tabs.scss
@@ -1,4 +1,4 @@
-.code-tabs{
+.xcode-tabs{
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -7,7 +7,7 @@
     font-size: var(--tiklab-font-13);
 }
 
-.code-tab{
+.xcode-tab{
     cursor: pointer;
     height: 40px;
     line-height: 40px;
@@ -17,7 +17,7 @@
     }
 }
 
-.code-active-tab{
+.xcode-active-tab{
     color: var(--tiklab-blue);
     border-bottom: 2px solid var(--tiklab-blue);
 }
