--- a/src/modules/houseDetails/commits/components/commitsDetails.scss
+++ b/src/modules/houseDetails/commits/components/commitsDetails.scss
@@ -75,6 +75,7 @@
                             align-items: center;
                             .item-icon{
                                 margin-right: 8px;
+                                cursor: pointer;
                             }
                             .item-title{
                                 font-weight: 500;
