--- a/src/modules/houseDetails/tag/components/tag.scss
+++ b/src/modules/houseDetails/tag/components/tag.scss
@@ -19,7 +19,11 @@
             align-items: center;
             cursor: pointer;
             .name-icon{
-                margin-right: 5px;
+                border: 1px solid #d9d9d9;
+                padding: 8px;
+                display: inline-block;
+                height: 32px;
+                margin-right: 10px;
             }
             .name-text{
                 flex: 1;
