--- a/src/modules/sys/common/system.scss
+++ b/src/modules/sys/common/system.scss
@@ -7,7 +7,7 @@
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 200px;
-        background: var(--mf-sider-color);
+        background: var(--xcode-sider-color);
         &-sys{
             width: 100%;
             text-align: center;
